# importer

./: .dockerignore  .gitignore  README.md  pyproject.toml
docs/: Como criar layouts.md  Postman.json  Recebendo input.md
infra/: Dockerfile  compose.override.yaml  compose.yaml  db.sql
src/converter/: .env  .env.example  logging.json  server.py  settings.py
src/converter/conversores/: pymupdf.py  pypdf.py
src/converter/errors/: error.py
src/converter/layouts/: 6174.py  6223.py  lancamento.py  layout_base.py  layout_info.py  layout_ref.py  loader.py
src/converter/models/: new_layout.py
src/converter/tasks/: clear_db.py  config.py  processa.py
src/converter/uteis/: arquivos.py  config_logger.py  datas.py  rest.py  status.py  texto.py  valores.py
